feat: 更新模型保存策略和README准确率统计
- 修改模型保存策略：前20%轮不保存，超过20%后先保存一轮，然后比较最优
- 保存最佳模型和最后一个模型
- 更新README中的准确率统计数据（2530个模型）
- 添加训练记录文件和期货列表到.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,11 @@ dmypy.json
 # 临时/垃圾文件夹
 trash/
 
+# 训练记录文件
+training_failed.txt
+training_success.txt
+training.log
+
+# 期货列表文件（可能包含个人配置）
+futures_list.txt
+
