添加成交量过滤逻辑：滤除成交量小于平均值30%的数据
- 在data_processor.py中添加成交量过滤，确保训练数据质量
- 在today_inference/process_and_create_sequence.py中添加相同过滤逻辑，保持推理一致性
- 在calculate_profit.py中添加原始数据过滤，确保利润计算使用过滤后的数据
- 更新.gitignore，忽略calculate_profit文件夹下的结果文件

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@ training.log
 # 期货列表文件（可能包含个人配置）
 futures_list.txt
 
+# 推理结果文件
+infer_res/calculate_profit/*/profit_result_*.json
+infer_res/calculate_profit/*/trade_records_*.csv
+
