feat: Update label processing logic and support futures data
- Update label processing: change from binary 0/1 to linear mapping based on price change percentage
  - Price change > 3%: label = 1.0
  - Price change < -3%: label = 0.0
  - Price change between -3% and 3%: linear mapping to 0~1 (0% = 0.5)
- Update training code to support continuous labels (regression task)
  - Change model output from 2 classes to 1 value with sigmoid activation
  - Change loss function from CrossEntropyLoss to BCELoss
  - Update accuracy calculation based on 0.5 threshold
- Fix data fetching to support futures data (NI0, AG0, AU0)
  - Add futures data fetching support in data_fetcher.py
  - Fix get_stock_data.py to handle empty ETF data and support futures
- Update data balancing logic for continuous labels

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 mode: train
 stock:
-  stock_code: 'NI0'
+  stock_code: 'AU0'
   end_date: null
 data:
   raw_data_dir: data/raw
@@ -11,7 +11,7 @@ data:
   auto_fetch_data: true
 training:
   batch_size: 512
-  num_epochs: 3000
+  num_epochs: 8000
   learning_rate: 0.001
   hidden_size: 128
   early_stopping_patience: 10000
